[package]
name = "http_share"
version = "0.1.0"
authors = ["Kendrick Grünberg <k.gruenberg@tu-braunschweig.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
percent-encoding = "2.1.0"
chrono = "0.4"
separator = "0.3.1"
base64 = "0.13.0"
ansi_term = "0.12"
lazy_static = "1.4.0"
rand = "0.8.5"
